--- a/user-dasboard.html
+++ b/user-dasboard.html
@@ -59,7 +59,7 @@
         <a href="#home">Home</a>
         <a href="#profile">Profile</a>
         <a href="#question-bank">Question Bank</a>
-        <a href="#practice-tests">Practice Tests</a>
+        <a href="quiz.html">Practice Tests</a>
         <a href="#study-plans">Study Plans</a>
         <a href="#performance">Performance</a>
         <a href="#discussion-forums">Discussion Forums</a>
