--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
                 if (userData.role === 'admin') {
                     window.location.href = 'admin-dashboard.html';
                 } else {
-                    window.location.href = 'user-dashboard.html';
+                    window.location.href = 'user-dasboard.html';
                 }
             } else {
                 alert('Invalid password');
