--- a/login.html
+++ b/login.html
@@ -52,6 +52,11 @@
 <div class="login-container">
     <h2>Login</h2>
     <form id="login-form">
+        <label>User</label>
+        <input type="radio">
+        <label>Admin</label>
+        <br><br>
+        <input type="radio">
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
         <input type="submit" value="Login">
