--- a/quiz.html
+++ b/quiz.html
@@ -3,165 +3,225 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Page</title>
+    <title>Quiz Portal</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
         }
         .container {
-            width: 80%;
-            margin: 0 auto;
+            max-width: 800px;
+            margin: 20px auto;
             padding: 20px;
-        }
-        .header {
-            text-align: center;
-            padding: 20px 0;
-        }
-        .header h1 {
-            margin: 0;
-        }
-        .quiz-section, .review-section {
             background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
+            border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
         }
-        .quiz-section h2, .review-section h2 {
-            margin-top: 0;
-        }
-        .question {
-            margin-bottom: 15px;
-        }
-        .question p {
-            margin: 0 0 10px;
-        }
-        .question input[type="radio"],
-        .question input[type="checkbox"] {
-            margin-right: 10px;
-        }
-        .buttons {
+        h1 {
             text-align: center;
-            margin-top: 20px;
         }
-        .buttons button {
-            padding: 10px 20px;
-            border: none;
+        select {
+            padding: 10px;
+            margin-bottom: 20px;
+            width: 100%;
+            border: 1px solid #ccc;
             border-radius: 5px;
-            background-color: #007BFF;
-            color: white;
+            font-size: 16px;
             cursor: pointer;
         }
-        .buttons button:hover {
-            background-color: #0056b3;
+        .quiz {
+            display: none;
+        }
+        .quiz.active {
+            display: block;
+        }
+        .quiz-question {
+            margin-bottom: 20px;
+        }
+        .quiz-answer {
+            margin-bottom: 10px;
+        }
+        .quiz-submit {
+            padding: 10px 20px;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="header">
-        <h1>Exam Preparation System</h1>
-        <p>Your go-to place for effective exam preparation</p>
-    </div>
-
-    <div class="quiz-section">
-        <h2>Attempt Quiz</h2>
-        <form id="quizForm">
-            <div class="question">
-                <p>1. What is the capital of France?</p>
-                <label><input type="radio" name="q1" value="Paris"> Paris</label>
-                <label><input type="radio" name="q1" value="London"> London</label>
-                <label><input type="radio" name="q1" value="Berlin"> Berlin</label>
-                <label><input type="radio" name="q1" value="Madrid"> Madrid</label>
-            </div>
-            <div class="question">
-                <p>2. Which of the following is a prime number?</p>
-                <label><input type="checkbox" name="q2" value="2"> 2</label>
-                <label><input type="checkbox" name="q2" value="4"> 4</label>
-                <label><input type="checkbox" name="q2" value="6"> 6</label>
-                <label><input type="checkbox" name="q2" value="9"> 9</label>
-            </div>
-            <div class="question">
-                <p>3. Explain the theory of relativity.</p>
-                <textarea name="q3" rows="4" style="width: 100%;"></textarea>
-            </div>
-            <div class="buttons">
-                <button type="submit">Submit Quiz</button>
-            </div>
-        </form>
-    </div>
-
-    <div class="review-section">
-        <h2>Review Answers</h2>
-        <div id="reviewContent"></div>
-        <div class="buttons">
-            <button onclick="showReview()">View Review</button>
-            <button id="finishQuizButton" style="display: none;" onclick="finishQuiz()">Finish Quiz</button>
-        </div>
-    </div>
+    <h1>Quiz Portal</h1>
+    <form id="quiz-form">
+        <select id="semester-select">
+            <option value="" disabled selected>Select Semester</option>
+            <option value="semester1">Semester 1</option>
+            <option value="semester2">Semester 2</option>
+            <!-- Add more semester options as needed -->
+        </select>
+        <select id="subject-select">
+            <option value="" disabled selected>Select Subject</option>
+            <!-- Populate options dynamically using JavaScript based on the semester selection -->
+        </select>
+        <div id="quiz-container" class="quiz"></div>
+        <button type="submit" id="quiz-submit" class="quiz-submit">Submit Quiz</button>
+    </form>
+    <div id="quiz-review" class="quiz"></div>
 </div>
 
 <script>
-    const userAnswers = {
-        q1: '',
-        q2: [],
-        q3: ''
+    const semesterSubjects = {
+        semester1: ["Mathematics", "Science", "English"],
+        semester2: ["History", "Geography", "Art"]
+        // Add more subjects for each semester as needed
     };
 
-    document.getElementById('quizForm').addEventListener('submit', function(event) {
-        event.preventDefault();
+    const quizzes = {
+        mathematics: [
+            {
+                question: "What is 2 + 2?",
+                answers: ["3", "4", "5", "6"],
+                correctAnswer: "4"
+            },
+            {
+                question: "What is the square root of 9?",
+                answers: ["1", "3", "6", "9"],
+                correctAnswer: "3"
+            }
+        ],
+        science: [
+            {
+                question: "What is the chemical symbol for water?",
+                answers: ["H2O", "CO2", "O2", "HCl"],
+                correctAnswer: "H2O"
+            },
+            {
+                question: "What is the boiling point of water in Celsius?",
+                answers: ["0", "100", "50", "200"],
+                correctAnswer: "100"
+            }
+        ],
+        english: [
+            {
+                question: "Who wrote 'Romeo and Juliet'?",
+                answers: ["William Shakespeare", "Charles Dickens", "Jane Austen", "F. Scott Fitzgerald"],
+                correctAnswer: "William Shakespeare"
+            },
+            {
+                question: "What is a synonym for 'beautiful'?",
+                answers: ["Ugly", "Gorgeous", "Ordinary", "Plain"],
+                correctAnswer: "Gorgeous"
+            }
+        ],
+        history: [
+            {
+                question: "In which year did World War I begin?",
+                answers: ["1914", "1918", "1939", "1945"],
+                correctAnswer: "1914"
+            },
+            {
+                question: "Who was the first president of the United States?",
+                answers: ["George Washington", "Thomas Jefferson", "Abraham Lincoln", "John Adams"],
+                correctAnswer: "George Washington"
+            }
+        ],
+        geography: [
+            {
+                question: "Which continent is the largest by land area?",
+                answers: ["Asia", "Africa", "North America", "South America"],
+                correctAnswer: "Asia"
+            },
+            {
+                question: "What is the capital of Australia?",
+                answers: ["Sydney", "Melbourne", "Canberra", "Brisbane"],
+                correctAnswer: "Canberra"
+            }
+        ],
+        art: [
+            {
+                question: "Who painted the Mona Lisa?",
+                answers: ["Vincent van Gogh", "Leonardo da Vinci", "Pablo Picasso", "Michelangelo"],
+                correctAnswer: "Leonardo da Vinci"
+            },
+            {
+                question: "What is the primary color wheel made up of?",
+                answers: ["Red, Green, Blue", "Yellow, Blue, Green", "Red, Yellow, Blue", "Black, White, Gray"],
+                correctAnswer: "Red, Yellow, Blue"
+            }
+        ]
+        // Add more quizzes for each subject as needed
+    };
 
-        const q1 = document.querySelector('input[name="q1"]:checked');
-        if (q1) {
-            userAnswers.q1 = q1.value;
-        }
+    const semesterSelect = document.getElementById("semester-select");
+    const subjectSelect = document.getElementById("subject-select");
+    const quizContainer = document.getElementById("quiz-container");
+    const quizReview = document.getElementById("quiz-review");
+    const quizForm = document.getElementById("quiz-form");
 
-        const q2 = document.querySelectorAll('input[name="q2"]:checked');
-        userAnswers.q2 = Array.from(q2).map(checkbox => checkbox.value);
-
-        const q3 = document.querySelector('textarea[name="q3"]').value;
-        userAnswers.q3 = q3;
-
-        alert('Quiz submitted!');
-        
-        // Calculate score (for demonstration purposes, let's assume q1 correct answer is "Paris" and q2 correct answers are "2")
-        let score = 0;
-        if (userAnswers.q1 === 'Paris') score += 50;
-        if (userAnswers.q2.includes('2') && userAnswers.q2.length === 1) score += 50;
-
-        // Display the score
-        alert('Your score: ' + score);
-
-        // Store quiz result in localStorage
-        const performanceData = JSON.parse(localStorage.getItem('performanceData')) || [];
-        performanceData.push({ topic: 'Sample Quiz', score });
-        localStorage.setItem('performanceData', JSON.stringify(performanceData));
-
-        // Display performance metrics after storing the data
-        displayPerformance();
+    // Populate subject options based on selected semester
+    semesterSelect.addEventListener("change", () => {
+        const selectedSemester = semesterSelect.value;
+        subjectSelect.innerHTML = "<option value='' disabled selected>Select Subject</option>";
+        semesterSubjects[selectedSemester].forEach(subject => {
+            const option = document.createElement("option");
+            option.text = subject;
+            option.value = subject.toLowerCase().replace(/\s+/g, "");
+            subjectSelect.add(option);
+        });
     });
 
-    function showReview() {
-        const reviewContent = document.getElementById('reviewContent');
-        reviewContent.innerHTML = `
-            <p>1. What is the capital of France?</p>
-            <p><strong>Answer:</strong> ${userAnswers.q1}</p>
-            <p>2. Which of the following is a prime number?</p>
-            <p><strong>Answer:</strong> ${userAnswers.q2.join(', ')}</p>
-            <p>3. Explain the theory of relativity.</p>
-            <p><strong>Answer:</strong> ${userAnswers.q3}</p>
-        `;
-        document.getElementById('finishQuizButton').style.display = 'block';
-    }
+    // Display quiz questions based on selected subject
+    subjectSelect.addEventListener("change", () => {
+        const selectedSubject = subjectSelect.value;
+        quizContainer.innerHTML = "";
+        quizzes[selectedSubject].forEach((quizData, index) => {
+            const questionDiv = document.createElement("div");
+            questionDiv.classList.add("quiz-question");
+            questionDiv.innerHTML = `<p><strong>Question ${index + 1}:</strong> ${quizData.question}</p>`;
+            quizData.answers.forEach(answer => {
+                const input = document.createElement("input");
+                input.type = "radio";
+                input.name = `answer-${index}`;
+                input.value = answer;
+                questionDiv.appendChild(input);
+                const label = document.createElement("label");
+                label.innerHTML = answer;
+                questionDiv.appendChild(label);
+                questionDiv.appendChild(document.createElement("br"));
+            });
+            quizContainer.appendChild(questionDiv);
+        });
+        quizContainer.classList.add("active");
+    });
 
-    function finishQuiz() {
-        alert('Thank you for completing the quiz!');
-        window.location.href = '/dashboard'; // Redirect to the dashboard
-    }
+    // Submit quiz
+    quizForm.addEventListener("submit", e => {
+        e.preventDefault();
+        const formData = new FormData(quizForm);
+        let score = 0;
+        let reviewHTML = "<h2>Quiz Review</h2>";
+        formData.forEach((value, key) => {
+            const questionIndex = key.split("-")[1];
+            const correctAnswer = quizzes[subjectSelect.value][questionIndex].correctAnswer;
+            reviewHTML += `<div class="quiz-question">
+                                <p><strong>Question ${parseInt(questionIndex) + 1}:</strong> ${quizzes[subjectSelect.value][questionIndex].question}</p>
+                                <p><strong>Your Answer:</strong> ${value}</p>
+                                <p><strong>Correct Answer:</strong> ${correctAnswer}</p>
+                            </div>`;
+            if (value === correctAnswer) {
+                score++;
+            }
+        });
+        reviewHTML += `<h3>Your Score: ${score} out of ${quizzes[subjectSelect.value].length}</h3>`;
+        quizReview.innerHTML = reviewHTML;
+        quizReview.classList.add("active");
+        quizContainer.classList.remove("active");
+    });
 </script>
 
 </body>
