--- a/performance.html
+++ b/performance.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Performance Tracker</title>
-    <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
@@ -69,6 +68,7 @@
     </div>
 
     <script>
+        // Dummy data (replace with actual data)
         const data = {
             quizzesCompleted: 10,
             topicsCompleted: 5,
@@ -76,11 +76,13 @@
             chaptersLeft: 15
         };
 
+        // Display data
         document.getElementById('quizzesCompleted').innerText = data.quizzesCompleted;
         document.getElementById('topicsCompleted').innerText = data.topicsCompleted;
         document.getElementById('daysLeft').innerText = data.daysLeft;
         document.getElementById('chaptersLeft').innerText = data.chaptersLeft;
 
+        // Graphs
         const quizzesChart = new Chart(document.getElementById('quizzesChart').getContext('2d'), {
             type: 'doughnut',
             data: {
