--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -7,50 +7,129 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #f8f8f8;
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            background-color: #007BFF;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .header h1 {
             margin: 0;
         }
-        .dashboard-container {
+        .nav {
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+        .nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
+        .nav a:hover {
+            background-color: #0056b3;
+        }
+        .container {
+            padding: 20px;
+        }
+        .section {
             background-color: #fff;
             padding: 20px;
+            margin-bottom: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
-            width: 300px;
-            text-align: center;
+            display: none; /* Initially hide all sections */
         }
-        .dashboard-container h2 {
-            margin-bottom: 20px;
+        .section.active {
+            display: block; /* Display only the active section */
         }
-        .dashboard-container button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
+        .section h2 {
+            margin-top: 0;
+        }
+        iframe {
             border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        .dashboard-container button:hover {
-            background-color: #0056b3;
+            width: 100%;
+            height: 500px; /* Adjust the height as needed */
         }
     </style>
 </head>
 <body>
 
-<div class="dashboard-container">
-    <h2>Admin Dashboard</h2>
-    <p>Welcome, Admin!</p>
-    <button onclick="logout()">Logout</button>
+<div class="header">
+    <h1>Admin Dashboard</h1>
+    <div class="nav">
+        <a href="#profile">Profile</a>
+        <a href="#question-bank">Question Bank</a>
+        <a href="#practice-tests">Practice Tests</a>
+        <a href="#study-plans">Study Plans</a>
+        <a href="#performance">Performance</a>
+        <a href="#discussion-forums">Discussion Forums</a>
+        <a href="#logout">Logout</a>
+    </div>
+</div>
+
+<div class="container">
+
+    <div id="question-bank" class="section">
+        <h2>Question Bank</h2>
+        <iframe src="adqb.html"></iframe>
+    </div>
+    <div id="practice-tests" class="section">
+        <h2>Practice Tests</h2>
+        <iframe src="adpt.html"></iframe>
+    </div>
+    <div id="study-plans" class="section">
+        <h2>Study Plans</h2>
+        <iframe src="study-plan.html"></iframe>
+    </div>
+    <div id="performance" class="section">
+        <h2>Performance</h2>
+        <p>Track your performance metrics such as scores, time taken, and areas of improvement.</p>
+        <iframe src="performance.html"></iframe>
+    </div>
+    <div id="discussion-forums" class="section">
+        <h2>Discussion Forums</h2>
+        <p>Engage with peers in discussion boards to ask questions and share knowledge.</p>
+        <iframe src="afaq.html"></iframe>
+    </div>
+    <div id="logout" class="section">
+        <h2>Logout</h2>
+        <p>Click the button below to logout from your account.</p>
+        <a href="login.html"><button>Logout</button></a>
+    </div>
 </div>
 
 <script>
-    function logout() {
-        window.location.href = 'login.html';
+    // Get all links in the navigation
+    const navLinks = document.querySelectorAll('.nav a');
+    // Get all sections
+    const sections = document.querySelectorAll('.section');
+
+    // Function to handle navigation clicks
+    function handleNavClick(event) {
+        // Prevent default link behavior
+        event.preventDefault();
+        // Get the target section id from the link's href attribute
+        const targetId = this.getAttribute('href').substring(1);
+        // Hide all sections
+        sections.forEach(section => {
+            section.classList.remove('active');
+        });
+        // Show the target section
+        document.getElementById(targetId).classList.add('active');
     }
+
+    // Add click event listener to each navigation link
+    navLinks.forEach(link => {
+        link.addEventListener('click', handleNavClick);
+    });
 </script>
 
 </body>
