--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -83,7 +83,7 @@
     </div>
     <div id="practice-tests" class="section">
         <h2>Practice Tests</h2>
-        <iframe src="adpt.html"></iframe>
+        <iframe src="admin_practice_test.html"></iframe>
     </div>
     <div id="study-plans" class="section">
         <h2>Study Plans</h2>
