--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -83,7 +83,7 @@
     </div>
     <div id="practice-tests" class="section">
         <h2>Practice Tests</h2>
-        <iframe src="admin_practice_test.html"></iframe>
+        <iframe src="adpt.html"></iframe>
     </div>
     <div id="study-plans" class="section">
         <h2>Study Plans</h2>
@@ -107,26 +107,21 @@
 </div>
 
 <script>
-    // Get all links in the navigation
+
     const navLinks = document.querySelectorAll('.nav a');
-    // Get all sections
     const sections = document.querySelectorAll('.section');
 
-    // Function to handle navigation clicks
+   
     function handleNavClick(event) {
-        // Prevent default link behavior
+      
         event.preventDefault();
-        // Get the target section id from the link's href attribute
         const targetId = this.getAttribute('href').substring(1);
-        // Hide all sections
         sections.forEach(section => {
             section.classList.remove('active');
         });
-        // Show the target section
         document.getElementById(targetId).classList.add('active');
     }
 
-    // Add click event listener to each navigation link
     navLinks.forEach(link => {
         link.addEventListener('click', handleNavClick);
     });
