--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -70,7 +70,7 @@
         <a href="#practice-tests">Practice Tests</a>
         <a href="#study-plans">Study Plans</a>
         <a href="#performance">Performance</a>
-        <a href="#discussion-forums">Discussion Forums</a>
+        <a href="#discussion-forums">FAQ</a>
         <a href="#logout">Logout</a>
     </div>
 </div>
@@ -95,9 +95,8 @@
         <iframe src="performance.html"></iframe>
     </div>
     <div id="discussion-forums" class="section">
-        <h2>Discussion Forums</h2>
-        <p>Engage with peers in discussion boards to ask questions and share knowledge.</p>
-        <iframe src="afaq.html"></iframe>
+        <h2>FAQ</h2>
+        <iframe src="faq.html"></iframe>
     </div>
     <div id="logout" class="section">
         <h2>Logout</h2>
